fixed errors found in review